# rp2040-project-template

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yml
src/: main.rs
